<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="test"
            type="com.example.mobiletest.ui.test5g.Test5GMsgActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.test5g.Test5GMsgActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/back"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_margin="12dp"
                android:onClick="@{()->test.back()}"
                android:src="@mipmap/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/test_based_on_SIM_card"
                android:textColor="#FF333333"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#E2E2E2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/imageEncryptOrDecrypt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/ripple_bg"
            android:onClick="@{()->test.goOnlinePay()}"
            android:text="@string/_5g_msg"
            android:textColor="@color/textColor"
            android:textSize="@dimen/button_size"
            app:layout_constraintBottom_toTopOf="@+id/encryptOrDecrypt"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/encryptOrDecrypt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:visibility="gone"
            android:layout_marginRight="35dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/ripple_bg"
            android:onClick="@{()->test.goEncryptOrDecrypt()}"
            android:text="@string/encrypt_or_decrypt"
            android:textColor="@color/textColor"
            android:textSize="@dimen/button_size"
            app:layout_constraintBottom_toTopOf="@+id/onlinePay"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/onlinePay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:background="@drawable/ripple_bg"
            android:onClick="@{()->test.goNFCPay()}"
            android:text="@string/nfc_pay"
            android:textColor="@color/textColor"
            android:textSize="@dimen/button_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintVertical_bias="0.35" />

        <Button
            android:id="@+id/NFCPay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="35dp"
            android:background="@drawable/ripple_bg"
            android:onClick="@{()->test.goImageEncryptOrDecrypt()}"
            android:text="@string/image_encrypt_or_decrypt"
            android:textColor="@color/textColor"
            android:textSize="@dimen/button_size"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/onlinePay" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>